# src/modules/organization/members/entities/organization_invitations.rs
@@ -1,0 +1,27 @@
+//! `SeaORM` Entity, @generated by sea-orm-codegen 2.0
+
+use super::sea_orm_active_enums::OrganizationInvitationsStatus;
+use super::sea_orm_active_enums::OrganizationMemberRole;
+use sea_orm::entity::prelude::*;
+use serde::{Deserialize, Serialize};
+
+#[derive(Clone, Debug, PartialEq, Eq, DeriveEntityModel, Serialize, Deserialize)]
+#[sea_orm(table_name = "organization_invitations")]
+pub struct Model {
+    #[sea_orm(primary_key, auto_increment = false)]
+    pub id: Uuid,
+    pub organization_id: Uuid,
+    pub email: String,
+    pub role: Option<OrganizationMemberRole>,
+    #[sea_orm(unique)]
+    pub token: String,
+    pub status: Option<OrganizationInvitationsStatus>,
+    pub expires_at: DateTimeWithTimeZone,
+    pub created_at: DateTimeWithTimeZone,
+    pub updated_at: DateTimeWithTimeZone,
+}
+
+#[derive(Copy, Clone, Debug, EnumIter, DeriveRelation)]
+pub enum Relation {}
+
+impl ActiveModelBehavior for ActiveModel {}
