# src/modules/organization/members/entities/organization_member.rs
@@ -1,18 +1,0 @@
-use sea_orm::entity::prelude::*;
-use serde::{Deserialize, Serialize};
-
-#[derive(Clone, Debug, PartialEq, Eq, DeriveEntityModel, Serialize, Deserialize)]
-#[sea_orm(table_name = "organization_members")]
-pub struct Model {
-    #[sea_orm(primary_key, auto_increment = false)]
-    pub organization_id: Uuid,
-    #[sea_orm(primary_key, auto_increment = false)]
-    pub user_id: Uuid,
-    pub role: String,
-    pub joined_at: DateTimeWithTimeZone,
-}
-
-#[derive(Copy, Clone, Debug, EnumIter, DeriveRelation)]
-pub enum Relation {}
-
-impl ActiveModelBehavior for ActiveModel {}
